# SpaceSimCore

./: .gitignore  CMakeLists.txt  CmakeFile.txt  LICENSE  README.md  SetupBindingsForStl.sh
bindings/: ArrayStl.h  SharedPointerStl.h
include/: ChangeCallback.hpp  ChangeCallbackCalculateInverse.hpp
include/bindings/: Array.h  SharedPointer.h
include/celestialMathematics/: Constants.h  HohmannTransfer.h  MassTable.h  Orbit.h  StarGeneration.h
include/collision/: RaySphereRelativeStructureOfArrays.hpp  SphereRayHelper.h  SphereRayHelper.hpp
include/math/: Math.h  RaySphere.hpp  RungeKutta4.h
include/memory/: AlignedAllocator.hpp  FixedAllocator.h  SmartRawMemory.h
include/physics/: Angular.hpp  AttachedForce.h  CelestialBody.h  CollisionCallback.hpp  FastParticle.hpp  InertiaForIrregularShape.hpp  InertiaHelper.hpp  PhysicsBody.h  PhysicsEngine.h
include/solver/: SimplexSolver.hpp
src/celestialMathematics/: HohmannTransfer.cpp  Orbit.cpp  StarGeneration.cpp
src/collision/: RaySphereRelativeStructureOfArrays.cpp  SphereRayHelper.cpp
src/math/: RaySphere.cpp
src/memory/: SmartRawMemory.cpp
src/physics/: InertiaHelper.cpp  PhysicsBody.cpp  PhysicsEngine.cpp
tests/manual/: TestSimplexSolver.cpp
tests/performance/: PerformanceFastParticles.cpp
